--- a/views/archive/archive-index.ejs
+++ b/views/archive/archive-index.ejs
@@ -6,7 +6,7 @@
 
 		<div class='entry archive'>
 			<h2><%=day.display%></h2>
-			<a href='/archive/<%=day.url%>'><i class="fa fa-arrow-circle-right fa-2x" aria-hidden="true"></i></a>
+			<a href='/archive/<%=day.url%>'><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
 		</div>
 	
 	<% } %>
