--- a/views/archive/day-single.ejs
+++ b/views/archive/day-single.ejs
@@ -1,12 +1,12 @@
 <% include ../partials/boilerplate %>
 	
 	<a href='/archive' class='back'>
-		<i class="fa fa-chevron-left fa-2x" aria-hidden="true"></i>
+		<i class="fa fa-chevron-left" aria-hidden="true"></i>
 	</a>
 
-	<h1><%= date %></h1>
+	<h1 class='date'><%= date %></h1>
 
-	<div class='headers entry'>
+	<div class='headers'>
 		<h2 class='time-col'>Time</h2>
 		<h2 class='name-col'>Item</h2>
 		<h2 class='cals-col'>Calories</h2>
@@ -15,14 +15,14 @@
 
 	<% for (let food of data) { %>
 		<div class='entry'>
-			<h2 class='time-col'><%= food.time %></h2>
+			<h2 class='time-col'><%= food.formattedTime %></h2>
 			<h2 class='name-col'><%= food.name %></h1>
 			<h2 class='cals-col'><%= food.cals %> calories</h2>
 			<h2 class ='details-col'></h2>
 		</div>
 	<% } %>
 
-	<div class='entry' id='total-cals'>
+	<div class='total-cals'>
 		<h2 class='time-col'>TOTAL</h2>
 		<h2 class='name-col'></h2>
 		<h2 class='cals-col'><%= totalCals%> calories</h2>
