--- a/views/food-entries/add-manual.ejs
+++ b/views/food-entries/add-manual.ejs
@@ -2,7 +2,7 @@
 <% include ../partials/boilerplate %>
 	
 	<a href='/food/add' class='back'>
-		<i class="fa fa-chevron-left fa-2x" aria-hidden="true"></i>
+		<i class="fa fa-chevron-left" aria-hidden="true"></i>
 	</a>
 
 	<h1>Add Item</h1>
