--- a/views/food-entries/food-result-add.ejs
+++ b/views/food-entries/food-result-add.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/boilerplate %>
 
 	<a href='/food/add' class='back'>
-		<i class="fa fa-chevron-left fa-2x" aria-hidden="true"></i>
+		<i class="fa fa-chevron-left" aria-hidden="true"></i>
 	</a>
 
 
