--- a/views/food-entries/food-result-add.ejs
+++ b/views/food-entries/food-result-add.ejs
@@ -18,7 +18,8 @@
 			</form>
 
 
-	
-	<a href='/food'>Cancel</a>
+	<div class='cancel'>
+	<a href='/food' id='cancel'>Cancel</a>
+	</div>
 
 <% include ../partials/end %>
