--- a/views/food-entries/food-single.ejs
+++ b/views/food-entries/food-single.ejs
@@ -4,7 +4,7 @@
 		<i class="fa fa-chevron-left" aria-hidden="true"></i>
 	</a>
 
-	<h1>Date</h1>
+	<h1><%= date %></h1>
 	<div class='single-div'>
 		<div><span>Time </span><h3><%= data.formattedTime %></h3></div>
 		<div><span>Item </span><h3><%= data.name %></h3></div>
