--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,28 @@
-<% include ./partials/boilerplate %>
+<!DOCTYPE html>
+<html lang='en'>
+<head>
+  <meta charset='UTF-8' />
+  <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+  <meta http-equiv='X-UA-Compatible' content='ie=edge' />
+  <title>Food Diary</title> 
+  <script src="https://use.fontawesome.com/c237e30b0b.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Asap:700" rel="stylesheet">
+  <link href="/styles/reset.css" rel="stylesheet" type="text/css">
+  <link href="/styles/style.css" rel="stylesheet" type="text/css"> 
+</head>
+<body>
 
 
 <div class='welcome-div'>
 	<h1 class='welcome'>welcome.</h1>
 	<i class="fa fa-cutlery fa-5x welcome" aria-hidden="true"></i>
+	<div class='home-div'>
+		<a href='/auth/login'>Log In</a>
+		<a href='/auth/register'>Register</a>
+	</div>
 </div>
 
-<div class='home-div'>
-	<a href='/auth/login' class='button'>Log In</a>
-	<a href='/auth/register' class='button'>Register</a>
-</div>
+
 
 <% include ./partials/end %>
