--- a/views/partials/boilerplate.ejs
+++ b/views/partials/boilerplate.ejs
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Asap:700" rel="stylesheet">
   <link href="/styles/reset.css" rel="stylesheet" type="text/css">
   <link href="/styles/style.css" rel="stylesheet" type="text/css"> 
+  <script src="https://d3js.org/d3.v4.min.js"></script
 </head>
 <body>
 <% include ./nav %>
