add favicon and title

--- a/views/partials/boilerplate.ejs
+++ b/views/partials/boilerplate.ejs
@@ -8,9 +8,11 @@
   <script src="https://use.fontawesome.com/c237e30b0b.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Asap:700" rel="stylesheet">
+   <title>Food Diary</title>
   <link href="/styles/reset.css" rel="stylesheet" type="text/css">
   <link href="/styles/style.css" rel="stylesheet" type="text/css"> 
-  <script src="https://d3js.org/d3.v4.min.js"></script
+  <script src="https://d3js.org/d3.v4.min.js"></script>
+  <link rel="shortcut icon" href="/images/food-diary.ico"/>
 </head>
 <body>
 <% include ./nav %>
