--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,8 @@
   <script src="https://use.fontawesome.com/c237e30b0b.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Asap:700" rel="stylesheet">
+  <title>Food Diary</title>
+  <link rel="shortcut icon" href="/images/food-diary.ico"/> 
   <link href="/styles/reset.css" rel="stylesheet" type="text/css">
   <link href="/styles/style.css" rel="stylesheet" type="text/css"> 
 </head>
